# packages/builder/examples/schema/openapi.json
@@ -1,343 +1,235 @@
 {
-	"openapi": "3.0.0",
-	"info": {
-		"version": "1.0.0",
-		"title": "BACKAN Example app",
-		"description": "API documentation for BACKAN Example"
-	},
-	"components": {
-		"schemas": {},
-		"parameters": {}
-	},
-	"paths": {
-		"/health": {
-			"get": {
-				"summary": "Check API health status",
-				"description": "Check if your API goes into trouble.",
-				"tags": [
-					"health"
-				],
-				"responses": {
-					"200": {
-						"description": "Successfully fetched data",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "object",
-									"properties": {
-										"ok": {
-											"type": "boolean",
-											"enum": [
-												true
-											]
-										}
-									},
-									"required": [
-										"ok"
-									]
-								}
-							}
-						}
-					},
-					"400": {
-						"description": "Bad request",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "object",
-									"properties": {
-										"status": {
-											"type": "number",
-											"enum": [
-												400
-											]
-										},
-										"id": {
-											"type": "string"
-										},
-										"message": {
-											"type": "string"
-										},
-										"error": {
-											"type": "object",
-											"properties": {}
-										},
-										"help": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"status",
-										"id",
-										"message",
-										"error",
-										"help"
-									]
-								}
-							}
-						}
-					},
-					"500": {
-						"description": "Internal Server error",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "object",
-									"properties": {
-										"status": {
-											"type": "number",
-											"enum": [
-												500
-											]
-										},
-										"id": {
-											"type": "string"
-										},
-										"message": {
-											"type": "string"
-										},
-										"error": {
-											"type": "object",
-											"properties": {}
-										},
-										"help": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"status",
-										"id",
-										"message",
-										"error",
-										"help"
-									]
-								}
-							}
-						}
-					}
-				}
-			}
-		},
-		"/random": {
-			"get": {
-				"summary": "Test route with response json",
-				"tags": [
-					"random"
-				],
-				"responses": {
-					"200": {
-						"description": "Successfully fetched data",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "object",
-									"properties": {
-										"fact": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"fact"
-									]
-								}
-							}
-						}
-					},
-					"400": {
-						"description": "Bad request",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "object",
-									"properties": {
-										"status": {
-											"type": "number",
-											"enum": [
-												400
-											]
-										},
-										"id": {
-											"type": "string"
-										},
-										"message": {
-											"type": "string"
-										},
-										"error": {
-											"type": "object",
-											"properties": {}
-										},
-										"help": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"status",
-										"id",
-										"message",
-										"error",
-										"help"
-									]
-								}
-							}
-						}
-					},
-					"500": {
-						"description": "Internal Server error",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "object",
-									"properties": {
-										"status": {
-											"type": "number",
-											"enum": [
-												500
-											]
-										},
-										"id": {
-											"type": "string"
-										},
-										"message": {
-											"type": "string"
-										},
-										"error": {
-											"type": "object",
-											"properties": {}
-										},
-										"help": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"status",
-										"id",
-										"message",
-										"error",
-										"help"
-									]
-								}
-							}
-						}
-					}
-				}
-			}
-		},
-		"/random/child": {
-			"get": {
-				"summary": "Test route with JSON response",
-				"tags": [
-					"random"
-				],
-				"parameters": [
-					{
-						"schema": {
-							"type": "string"
-						},
-						"required": true,
-						"name": "value",
-						"in": "query"
-					}
-				],
-				"responses": {
-					"200": {
-						"description": "Successfully fetched data",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "object",
-									"properties": {
-										"child": {
-											"type": "boolean",
-											"enum": [
-												true
-											]
-										}
-									},
-									"required": [
-										"child"
-									]
-								}
-							}
-						}
-					},
-					"400": {
-						"description": "Bad request",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "object",
-									"properties": {
-										"status": {
-											"type": "number",
-											"enum": [
-												400
-											]
-										},
-										"id": {
-											"type": "string"
-										},
-										"message": {
-											"type": "string"
-										},
-										"error": {
-											"type": "object",
-											"properties": {}
-										},
-										"help": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"status",
-										"id",
-										"message",
-										"error",
-										"help"
-									]
-								}
-							}
-						}
-					},
-					"500": {
-						"description": "Internal Server error",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "object",
-									"properties": {
-										"status": {
-											"type": "number",
-											"enum": [
-												500
-											]
-										},
-										"id": {
-											"type": "string"
-										},
-										"message": {
-											"type": "string"
-										},
-										"error": {
-											"type": "object",
-											"properties": {}
-										},
-										"help": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"status",
-										"id",
-										"message",
-										"error",
-										"help"
-									]
-								}
-							}
-						}
-					}
-				}
-			}
-		}
-	}
+  "openapi": "3.0.0",
+  "info": {
+    "version": "1.0.0",
+    "title": "BACKAN Example app",
+    "description": "API documentation for BACKAN Example"
+  },
+  "components": {
+    "schemas": {},
+    "parameters": {}
+  },
+  "paths": {
+    "/random": {
+      "get": {
+        "summary": "Test route with response json",
+        "tags": [
+          "random"
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully fetched data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "fact": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "fact"
+                  ]
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "number",
+                      "enum": [
+                        400
+                      ]
+                    },
+                    "id": {
+                      "type": "string"
+                    },
+                    "message": {
+                      "type": "string"
+                    },
+                    "error": {
+                      "type": "object",
+                      "properties": {}
+                    },
+                    "help": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "status",
+                    "id",
+                    "message",
+                    "error",
+                    "help"
+                  ]
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "number",
+                      "enum": [
+                        500
+                      ]
+                    },
+                    "id": {
+                      "type": "string"
+                    },
+                    "message": {
+                      "type": "string"
+                    },
+                    "error": {
+                      "type": "object",
+                      "properties": {}
+                    },
+                    "help": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "status",
+                    "id",
+                    "message",
+                    "error",
+                    "help"
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/random/child": {
+      "get": {
+        "summary": "Test route with JSON response",
+        "tags": [
+          "random"
+        ],
+        "parameters": [
+          {
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "name": "value",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully fetched data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "child": {
+                      "type": "boolean",
+                      "enum": [
+                        true
+                      ]
+                    }
+                  },
+                  "required": [
+                    "child"
+                  ]
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "number",
+                      "enum": [
+                        400
+                      ]
+                    },
+                    "id": {
+                      "type": "string"
+                    },
+                    "message": {
+                      "type": "string"
+                    },
+                    "error": {
+                      "type": "object",
+                      "properties": {}
+                    },
+                    "help": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "status",
+                    "id",
+                    "message",
+                    "error",
+                    "help"
+                  ]
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "number",
+                      "enum": [
+                        500
+                      ]
+                    },
+                    "id": {
+                      "type": "string"
+                    },
+                    "message": {
+                      "type": "string"
+                    },
+                    "error": {
+                      "type": "object",
+                      "properties": {}
+                    },
+                    "help": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "status",
+                    "id",
+                    "message",
+                    "error",
+                    "help"
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
