# packages/core/src/lib/health/main.ts
@@ -1,9 +1,9 @@
-import { Route }        from '../route'
 import { defaultHOpts } from './const'
 
+import type { AppSuper }           from '../super'
 import type { HealthRouteOptions } from './types'
 
-export const getHealthRoute = ( path: string, opts: HealthRouteOptions = {} ) => {
+export const setHealthRoute = <A extends AppSuper<object>>( app: A, path: string, opts: HealthRouteOptions = {} ) => {
 
 	const {
 		error400,
@@ -14,20 +14,15 @@ export const getHealthRoute = ( path: string, opts: HealthRouteOptions = {} ) =>
 		...defaultHOpts,
 		...opts,
 	}
-	// console.log( {
-	// 	defaultHOpts,
-	// 	opts,
-	// } )
-	const healthRoute = new Route( { path } )
 
-	if ( error400 ) healthRoute.RESPONSE_MESSAGES.ERROR_400 = error400
+	if ( error400 ) app.RESPONSE_MESSAGES.ERROR_400 = error400
 
 	const getValidationSuccessParams = () => {
 
-		type ValidateLiteral<T extends boolean> = ReturnType<typeof healthRoute.validation.literal<T>>
+		type ValidateLiteral<T extends boolean> = ReturnType<typeof app.validation.literal<T>>
 		type CustomValues = Record<string, ValidateLiteral<true> | ValidateLiteral<false>>
 
-		const defaultValue = { ok: healthRoute.validation.literal( true ) } as const
+		const defaultValue = { ok: app.validation.literal( true ) } as const
 
 		if ( !additionalResponseValues ) return defaultValue
 
@@ -38,7 +33,7 @@ export const getHealthRoute = ( path: string, opts: HealthRouteOptions = {} ) =>
 			if ( Object.prototype.hasOwnProperty.call( additionalResponseValues, key ) ) {
 
 				const value = additionalResponseValues[key]
-				res[key]    = healthRoute.validation.literal( value as true )
+				res[key]    = app.validation.literal( value as true )
 
 			}
 
@@ -47,16 +42,16 @@ export const getHealthRoute = ( path: string, opts: HealthRouteOptions = {} ) =>
 
 	}
 
-	healthRoute.add(
+	app.add(
 		{
 			method    : 'get',
-			path      : '/',
+			path      : path,
 			summary,
 			description,
 			responses : {
-				200 : healthRoute.response.responseJSONSuccess( healthRoute.validation.object( getValidationSuccessParams() ) ),
-				400 : healthRoute.response.responseJSONError400,
-				500 : healthRoute.response.responseJSONError500,
+				200 : app.response.responseJSONSuccess( app.validation.object( getValidationSuccessParams() ) ),
+				400 : app.response.responseJSONError400,
+				500 : app.response.responseJSONError500,
 			},
 			tags : [ 'health' ],
 		},
@@ -68,18 +63,18 @@ export const getHealthRoute = ( path: string, opts: HealthRouteOptions = {} ) =>
 					ok : true as const,
 					...additionalResponseValues,
 				}
-				return healthRoute.response.addSuccessResponse( c, response )
+				return app.response.addSuccessResponse( c, response )
 
 			}
 			catch ( e ) {
 
-				return healthRoute.response.add500Error( c, e )
+				return app.response.add500Error( c, e )
 
 			}
 
 		},
 	)
 
-	return healthRoute
+	return app
 
 }
